add /snip, consistency, cleaning
